# serializer version: 1
# name: test_file_structure[data_on_chain.whether_succeed]
  True
# ---
# name: test_file_structure[data_on_chain]
  PythonPackageStructureError(readme_missing=False, pyproject_toml_missing=False, init_py_missing=False, other_python_files=[])
# ---
# name: test_pytest_collect[data_on_chain]
  '9 tests collected in '
# ---
